# speech-to-text

./: .gitignore  README.md  package.json  plugin.xml
src/android/: AudioPlayer.java  Downloads.java  FileManager.java  NativeLib.java  NativeListener.java  SpeechToText.java  TTS.java  build.gradle
src/android/cpp/: AudioEngine.cpp  AudioEngine.h  CMakeLists.txt  native-lib.cpp
src/android/libs/: build.gradle
src/models/: build.gradle
www/: cordova-plugin-offline-speech.js  speech-to-text.js
